--- a/work/index.html
+++ b/work/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 
-<!--
+<!--комментарий
  Use OpenGL and GLUT to draw a simple cube
   with each face being a different color.  Rotations
   can be applied with the arrow keys, the page up
